--- a/02_introduccion_a_django.ipynb
+++ b/02_introduccion_a_django.ipynb
@@ -72,10 +72,10 @@
    "source": [
     "## Proyectos (projects) y aplicaciones (apps) de Django.\n",
     "\n",
-    "Al desarrollar aplicaciones web en *Django* se entoende lo siguiente:\n",
+    "Al desarrollar aplicaciones web en *Django* se entiende lo siguiente:\n",
     "\n",
     "* Un proyecto se refiere a un producto completo que será desplegado por el framework. Por lo general un proyecto corresponde a un sitio web.\n",
-    "* Una aplicación es un componente autocontenido del un proyecto y por lo general correposnde a una URL dentro del sitio."
+    "* Una aplicación es un componente autocontenido de un proyecto y por lo general correposnde a una URL dentro del sitio."
    ]
   },
   {
@@ -173,6 +173,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## El archivo ```manage.py```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Creación de una aplicación mínima.\n",
     "\n",
     "* La siguiente celda creará el sistema de archivos de una aplicación localizada en un nuevo subdirectorio llamado *main*."
@@ -249,7 +270,7 @@
    "source": [
     "## Inicio del servicio.\n",
     "\n",
-    "A continuación se ejecutará el servidor web de *Django*, el cual desplegará una página genérica.\n",
+    "A continuación se ejecutará el servidor web de *Django*, el cual desplegará la página que se genera por defecto.\n",
     "\n",
     "El servidor de *Django* está configurado para atender peticiones de *localhost* en el puerto *8000*, pero en este caso, se le indicará que atienda las peticiones desde cualquier IP en el puerto *5000*.\n",
     "\n",
@@ -302,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
