--- a/03_el_protocolo_http.ipynb
+++ b/03_el_protocolo_http.ipynb
@@ -94,14 +94,14 @@
     "\n",
     "El protocolo HTTP define métodos o \"verbos\", los cuales permiten realizar peticiones específicas entre un cliente y un servidor. Algunos de los métodos más utilizados son:\n",
     "\n",
-    "* ***GET*** se utiliza para obtener los datos de un recurso a partir de una URI. La información enviada mediante *GET* puede ser añadida a marcadores y puede ser regsitrada en las bitácoras del servidor.\n",
-    "* ***HEAD*** es similar al método GET, pero sólo proporciona el encabezado de la petición y el mensaje de estado resultante.\n",
-    "* ***POST*** se utiliza para cear un recurso. Los datos enviados no son expuestos en la URI sino que son enviados dentro de la estructura de la petición. \n",
-    "* ***PUT*** se utiliza para sustituir un recurso existente y su estructura es similar a la de *POST*.\n",
-    "* ***PATCH*** es un método que se utiliza para modificar parcialmente un recurso.\n",
-    "* ***DELETE*** es un método que se utiliza para eliminar un recurso. \n",
+    "* ```GET``` se utiliza para obtener los datos de un recurso a partir de una URI. La información enviada mediante ```GET``` puede ser añadida a marcadores y puede ser regsitrada en las bitácoras del servidor.\n",
+    "* ```HEAD``` es similar al método ```GET```, pero sólo proporciona el encabezado de la petición y el mensaje de estado resultante.\n",
+    "* ```POST``` se utiliza para cear un recurso. Los datos enviados no son expuestos en la URI sino que son enviados dentro de la estructura de la petición. \n",
+    "* ```PUT``` se utiliza para sustituir un recurso existente y su estructura es similar a la de ```POST```.\n",
+    "* ```PATCH``` es un método que se utiliza para modificar parcialmente un recurso.\n",
+    "* ```DELETE``` es un método que se utiliza para eliminar un recurso. \n",
     "\n",
-    "Existen algunos otros métodos como *OPTIONS*, *TRACE* y *CONNECT*, pero no están contemplados en el alcance de este taller. Puede consultar más al respecto puede acceder a https://developer.mozilla.org/es/docs/Web/HTTP/Methods.\n",
+    "Existen algunos otros métodos como ```OPTIONS```, ```TRACE``` y ```CONNECT```, pero no están contemplados en el alcance de este taller. Puede consultar más al respecto puede acceder a https://developer.mozilla.org/es/docs/Web/HTTP/Methods.\n",
     "\n",
     "### Idempotencia.\n",
     "\n",
@@ -111,28 +111,27 @@
     "\n",
     "Un método se considera seguro si no modifica los recursos a los que accede.\n",
     "\n",
-    "\n",
-    "|*  Método  *|*  Idempotente  *|*  Seguro  *|\n",
+    "|  Método  |  Idempotente  |  Seguro  |\n",
     "| -------- | ------------- | -------- |\n",
-    "|  **GET**  | Sí | Sí |\n",
-    "|  **HEAD**  | Sí | Sí |\n",
-    "|  **DELETE**  |Sí| No |\n",
-    "|  **POST**  | No | No|\n",
-    "|  **PUT**  | Sí | No|\n",
-    "|  **PATCH**  |No| No| \n",
+    "|  ```GET```  | Sí | Sí |\n",
+    "|  ```HEAD```  | Sí | Sí |\n",
+    "|  ```DELETE```  |Sí| No |\n",
+    "|  ``POST``` | No | No|\n",
+    "|  ```PUT```  | Sí | No|\n",
+    "|  ```PATCH``` |No| No| \n",
     "\n",
     "### Advertencia sobre los métodos seguros.\n",
     "\n",
-    "La seguridad de un método depende de su implementación y aún cuando se considera como una mala práctica, es posible que los métodos como *GET* sean capaces de modificar al recurso al que acceden."
+    "La seguridad de un método depende de su implementación y aún cuando se considera como una mala práctica, es posible que los métodos como ```GET``` sean capaces de modificar al recurso al que acceden."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El paquete _requests_.\n",
+    "## El paquete ```requests```.\n",
     "\n",
-    "El paquete [requests](http://docs.python-requests.org)  permite hacer peticiones mediante funciones que emulan los métodos del protocolo HTTP, regresando un objeto de Python que contiene los mensajes y datos de la respuesta del servidor a modo de atributos.\n",
+    "El paquete [```requests```](http://docs.python-requests.org)  permite hacer peticiones mediante funciones que emulan los métodos del protocolo HTTP, regresando un objeto de Python que contiene los mensajes y datos de la respuesta del servidor a modo de atributos.\n",
     "\n",
     "El paquete *requests* presenta funcionalidades avanzadas como autenticación, conexiones seguras, manejo de 'cookies', etc. "
    ]
@@ -170,12 +169,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* Se utilizará la función *requests.get()* en la URL https://pythonista.io/cursos para abir una conexión enviando una petición *GET*. \n",
-    "* Se desplegarán los siguientes datos guardados en el objeto resultante. ligado al nombre *sitio*.\n",
-    "    * Los encabezados de la petición contenidos en el atributo *sitios.headers*\n",
-    "    * El mensaje de estado resultante contenido en el atributo *sitio.status_code*.\n",
-    "    * El contenido de la respuesta contenido en el atributo *sitio.content*. \n",
-    "* Se cerrará la conexión mediante el método *sitio.close()*."
+    "* Se utilizará la función ```requests.get()``` en la URL https://pythonista.io/cursos para abir una conexión enviando una petición ```GET```  y el objeto resultante será nombrado ```sitio```."
    ]
   },
   {
@@ -197,6 +191,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Los encabezados de la petición contenidos en el atributo ```sitios.headers```."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -205,6 +206,13 @@
    "outputs": [],
    "source": [
     "print(sitio.headers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* El mensaje de estado resultante contenido en el atributo ```sitio.status_code```."
    ]
   },
   {
@@ -219,12 +227,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* El contenido de la respuesta contenido en el atributo ```sitio.content```."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "print(sitio.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* El texto de la respuesta contenido en el atributo ```sitio.text```. "
    ]
   },
   {
@@ -235,7 +257,14 @@
    },
    "outputs": [],
    "source": [
-    "sitio.text"
+    "print(sitio.text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Se cerrará la conexión mediante el método ```sitio.close()```."
    ]
   },
   {
@@ -253,12 +282,12 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "Se utilizará la función *requests.get()* en la URL https://pythonista.mx/cur (la cual no existe) para abir una conexión enviando una petición *GET*. Se desplegarán los siguientes datos guardados en el objeto resultante.\n",
+    "Se creará  la función ```get_url()``` la cual utilizará a la función ```requests.get()``` para abir una conexión enviando una petición ```GET```. \n",
     "\n",
-    "* El mensaje de estado resultante contenido en *sitio.status_code*.\n",
-    "* El contenido del atributo *sitio.content*. En este caso, un mensaje de error.\n",
+    "La función ```get_url()``` regresará un objeto de tipo ```tuple```  con los siguientes datos:\n",
     "\n",
-    "En este caso se utilizará la declaración *with* para cerrar la conexión ta pronto se ejecute el bloque de código  inscrito."
+    "* El mensaje de estado resultante contenido en ```sitio.status_code```.\n",
+    "* El contenido del atributo ```sitio.content```."
    ]
   },
   {
@@ -273,9 +302,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Se aplicará la función ```get_url()``` para la url (https://pythonista.io)[https://pythonista.io]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "get_url(\"https://pythonista.io\")"
@@ -285,13 +323,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* Se aplicará la función ```get_url()``` para la URL https://pythonista.io/cur, la cual no existe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_url(\"https://pythonista.io/cur\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Ejemplo:**\n",
     "\n",
-    "Se utilizará la función *requests.get()* para acceder a https://pythonista.mx (el cual hace un redireccionamiento a https://pythonista.io) para abir una conexión enviando una petición *GET*. Se desplegarán los siguientes datos guardados en el objeto resultante.\n",
+    "Se utilizará la función ```requests.get()``` para acceder a http://pythonista.mx para abir una conexión enviando una petición ```GET```. Se desplegarán los siguientes datos guardados en el objeto resultante.\n",
     "\n",
     "* El mensaje de estado resultante.\n",
-    "\n",
-    "En este caso se utilizará la declaración *with* para cerrar la conexión ta pronto se ejecute el bloque de código  inscrito."
+    "* Los envcabezados del mensaje de respuesta."
    ]
   },
   {
@@ -302,7 +355,7 @@
    },
    "outputs": [],
    "source": [
-    "with requests.head(\"https://pythonista.mx\") as sitio:\n",
+    "with requests.get(\"http://pythonista.mx\") as sitio:\n",
     "    print(sitio.status_code)\n",
     "    print(sitio.headers)"
    ]
@@ -469,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
