--- a/04_configuracion_de_un_proyecto.ipynb
+++ b/04_configuracion_de_un_proyecto.ipynb
@@ -33,17 +33,25 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* El comando mágico de Jupyter *%cat* permite ver el contenido de un archivo.\n",
+    "* El comando mágico de Jupyter ```%pycat``` permite ver el contenido de un archivo.\n",
     "* La siguiente celda desplegará el contenido del archivo *tutorial/tutorial/settings.py*\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: no such file, variable, URL, history range or macro\n"
+     ]
+    }
+   ],
    "source": [
-    "%cat tutorial/tutorial/settings.py"
+    "%pycat tutorial/tutorial/settings.py"
    ]
   },
   {
@@ -206,7 +214,7 @@
    "source": [
     "## Despliegue en producción.\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.1/howto/deployment/checklist/"
+    "https://docs.djangoproject.com/en/2.2/howto/deployment/checklist/"
    ]
   },
   {
@@ -234,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
