--- a/02_introduccion_a_django.ipynb
+++ b/02_introduccion_a_django.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Introducción a Django."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[*Django*](https://www.djangoproject.com/) es el marco de trabajo (framework) para desarrollo de aplicaciones web basado en Python de mayor popularidad y uno de los más [populares en general](https://hotframeworks.com/).\n",
     "\n",
     "Su lema es: \"El framework web para perfeccionistas con plazos de entrega\".\n",
@@ -41,7 +48,7 @@
    "source": [
     "## Instalación.\n",
     "\n",
-    "*Django* puede ser instalado con *pip* desde su repositorio en https://pypi.org/project/Django/."
+    "*Django* puede ser instalado con ```pip``` desde su repositorio en https://pypi.org/project/Django/."
    ]
   },
   {
@@ -52,7 +59,7 @@
     "\n",
     "La siguiente celda instalará *Django* en el entorno virtual contenido en la Máquina Virtual proporcionada por Pythonista<sup>®</sup> en https://pythonista.io/descargas/base/view.\n",
     "\n",
-    "**Nota:** En caso de utilizar esta notebook en un entorno distinto al del la máquina virtual de Pythonista<sup>®</sup>, tome en cuenta que debe de contar *pip* y los permisos necesarios para instalar el paquete correspondiente.\n"
+    "**Nota:** En caso de utilizar esta notebook en un entorno distinto al del la máquina virtual de Pythonista<sup>®</sup>, tome en cuenta que debe de contar con ```pip``` instalado y con los permisos necesarios para instalar el paquete correspondiente.\n"
    ]
   },
   {
@@ -70,12 +77,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Proyectos (projects) y aplicaciones (apps) de Django.\n",
+    "## Proyectos (projects) y aplicaciones (apps) de *Django*.\n",
     "\n",
     "Al desarrollar aplicaciones web en *Django* se entiende lo siguiente:\n",
     "\n",
     "* Un proyecto se refiere a un producto completo que será desplegado por el framework. Por lo general un proyecto corresponde a un sitio web.\n",
-    "* Una aplicación es un componente autocontenido de un proyecto y por lo general correposnde a una URL dentro del sitio."
+    "* Una aplicación es un componente autocontenido de un proyecto y por lo general corresponde a una URL dentro del sitio."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## El comando ```django-admin```.\n",
+    "\n",
+    "Este comando es el encargado de la administración general de los proyectos basados en *Django* y es instalado de forma automática cuando se instala el paquete.\n",
+    "\n",
+    "La sintaxis de uso del comando es la siguiente al ejecutarse desde una terminal.\n",
+    "\n",
+    "\n",
+    "```\n",
+    "django-admin <subcomando> <argumentos>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda despelgará la localización donde se encuentra ```django-admin```. \n",
+    "\n",
+    "\n",
+    "**Nota:** El comando ```which``` es propio de sistemas basados en GNU/Linux. En caso de que se ejecute el siguiente comando en un entorno distinto al de la VM proporcionada por Pythonista®, es posible que tenga que instalarlo. En otros sistemas no es posible ejecutar este comando."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!which django-admin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda despelgará la función de ayuda de ```django-admin```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!django-admin help"
    ]
   },
   {
@@ -84,10 +149,28 @@
    "source": [
     "## Despliegue de la estructura inicial de un proyecto.\n",
     "\n",
-    "* La siguiente celda creará la estructura inicial de un proyecto, la cual realizará lo siguiente:\n",
+    "El comando ```django-admin startproject``` creará la estructura inicial de un proyecto, usando la siguiente sintaxis:\n",
     "\n",
-    "   * Creará el subdirectorio *tutorial* en el subdirectorio en el que se encuentra la notebook.\n",
-    "   * Desplegará la estructura mínima de subdirectorios de un proyecto de Django."
+    "```\n",
+    "django-admin startproject <ruta del directorio del proyecto>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda realizará lo siguiente:\n",
+    "\n",
+    "   * Creará el subdirectorio ```tutorial``` en el directorio en el que se encuentra actualmente esta notebook.\n",
+    "   * Desplegará la estructura mínima de archivos y de subdirectorios de un proyecto de Django."
    ]
   },
   {
@@ -107,14 +190,14 @@
    "source": [
     "### La estructura por defecto de un proyecto de Django.\n",
     "\n",
-    "A continuación se mostrará la estructura creada dentro del subdirectorio [*tutorial*](tutorial)."
+    "A continuación se mostrará la estructura creada dentro del subdirectorio [```tutorial```](tutorial)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda moverá la ejecución de esta notebook al subdirectorio *tutorial*."
+    "* La siguiente celda moverá la ejecución de esta notebook al subdirectorio ```tutorial```."
    ]
   },
   {
@@ -136,7 +219,7 @@
     "\n",
     "**Nota:**\n",
     "    \n",
-    "El comando *tree* es propio de sistemas basados en GNU/Linux. En caso de que se ejecute el siguiente comando en un entorno distinto al de la VM proporcionada por Pythonista<sup>®</sup>, es posible que tenga que instalarlo. En otros sistemas no es posible ejecutar este comando."
+    "El comando ```tree``` es propio de sistemas basados en GNU/Linux. En caso de que se ejecute el siguiente comando en un entorno distinto al de la VM proporcionada por Pythonista<sup>®</sup>, es posible que tenga que instalarlo. En otros sistemas no es posible ejecutar este comando."
    ]
   },
   {
@@ -164,16 +247,47 @@
     "    ├── settings.py\n",
     "    ├── urls.py\n",
     "    └── wsgi.py\n",
+    "```\n",
     "\n",
-    "2 directories, 7 files\n",
-    "```"
+    "Se puede apreciar que en el directorio *tutorial* es encuentran:\n",
+    "* El script ```manage.py```\n",
+    "* Otro subdirectorio de nombre ```tutorial``` con la estructura de un paquete de Python."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El archivo ```manage.py```."
+    "## El script ```manage.py```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Este script hace uso de forma indirecta de ```django-admin``` para la gestión de un proyecto en particular con la siguiente sintaxis.\n",
+    "\n",
+    "```\n",
+    "<ruta>/manage.py <subcomando> <parámetros>\n",
+    "```\n",
+    "\n",
+    "A diferencia de ```django-admin```, es necesario definir la ruta en la que se encuentra el script.\n",
+    "\n",
+    "**Nota:** Se recomienda ejecutar ```manage.py``` desde el directorio en el que dicho script se encuentra. A partir de este momento se dará por hecho lo anterior."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* En vista de que el directorio de ejecución de esta notebook fue cambiado al subdirectorio ```prueba```, se ejecutará el script ```manage.py``` de la forma siguiente:"
    ]
   },
   {
@@ -181,22 +295,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "!./manage.py help"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creación de una aplicación mínima.\n",
+    "## Creación de una aplicación.\n",
     "\n",
-    "* La siguiente celda creará el sistema de archivos de una aplicación localizada en un nuevo subdirectorio llamado *main*."
+    "Para crear una aplicación se \n",
+    "\n",
+    "\n",
+    "manage.py \n",
+    "\n",
+    "* La siguiente celda creará el sistema de archivos de una aplicación localizada en un nuevo subdirectorio llamado ```main``` en el directorio ```prueba```."
    ]
   },
   {
@@ -214,22 +328,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda desplegará la estructura del nuevo subdirectorio [main](main).\n",
+    "* La siguiente celda desplegará la estructura del nuevo subdirectorio [```main```](main).\n",
     "\n",
     "**Nota:**\n",
     "    \n",
-    "El comando *tree* es propio de sistemas basados en GNU/Linux. En caso de que se ejecute el siguiente comando en un entorno distinto al de la VM proporcionada por Pythonista<sup>®</sup>, es posible que tenga que instalarlo. En otros sistemas no es posible ejecutar este comando."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "!tree"
+    "El comando ```tree``` es propio de sistemas basados en GNU/Linux. En caso de que se ejecute el siguiente comando en un entorno distinto al de la VM proporcionada por Pythonista<sup>®</sup>, es posible que tenga que instalarlo. En otros sistemas como Windows no es posible ejecutar este comando."
    ]
   },
   {
@@ -268,14 +371,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inicio del servicio.\n",
+    "## Arranque  del servidor de aplicaciones de  un proyecto.\n",
+    "\n",
+    "```\n",
+    "<ruta>/manage.py runserver <rango de transmisión>:<puerto>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "A continuación se ejecutará el servidor web de *Django*, el cual desplegará la página que se genera por defecto.\n",
     "\n",
-    "El servidor de *Django* está configurado para atender peticiones de *localhost* en el puerto *8000*, pero en este caso, se le indicará que atienda las peticiones desde cualquier IP en el puerto *5000*.\n",
+    "El servidor de *Django* está configurado para atender peticiones de ```localhost``` en el puerto ```8000```, pero en este caso, se le indicará que atienda las peticiones desde cualquier IP en el puerto ```5000```.\n",
     "\n",
     "**Nota:** \n",
-    "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto *5000*. \n",
+    "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto ```5000```. \n",
     "\n",
     "**ADVERTENCIA:** Al ejecutar la siguiente celda, el servidor se inciará desde la notebook, por lo que para ejecutar cualquier otra celda, deberá interrumpir la ejecución del kernel."
    ]
@@ -323,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
